# VN-Office

./: .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md
core/Apple/: CMakeLists.txt  IWork.cpp  IWork.h  IWork.pro
core/Apple/test/: main.cpp  test.pro
core/Common/: .gitignore  ASCATLError.h  ASCUtils.h  ASCUtilsDefines.h  ATLDefine.h  Base64.h  CMakeLists.txt  FileWriter.h  MS-LCID.h  MediaFormatDefine.h  OfficeDefines.h  OfficeFileErrorDescription.h  OfficeFileFormatChecker.h  OfficeFileFormatChecker2.cpp  OfficeFileFormatDefines.h  OfficeFileFormats.h  OfficeFileTemplate.h  VideoFileErrorDescription.h  base.pri  kernel.pro  kernel_config.h  posix_compat.h
core/Common/3dParty/: build_dependencies.sh  fetch.bat  make.bat  make.sh
core/Common/Network/: CMakeLists.txt  network.pro
core/Common/cfcpp/: CMakeLists.txt  CompoundFileLib.vcxproj  CompoundFileLib.vcxproj.filters  cfcpp.pro  cfexception.h  cfitem.cpp  cfitem.h  cfstorage.cpp  cfstorage.h  cfstream.cpp  cfstream.h  compoundfile.cpp  compoundfile.h  compoundfile_impl.h  directoryentry.cpp  directoryentry.h  event.h  guid.h  header.cpp  header.h  idirectoryentry.h  sector.cpp  sector.h  sectorcollection.cpp  sectorcollection.h  slist.h  streamrw.cpp  streamrw.h  streamview.cpp  streamview.h  svector.h
core/Common/js/: .gitignore  README.md  common.py  desktop_fetch.js  desktop_fetch_new.js  logging.h  make.py  min.py  polyfill.js  string_utf8.js
core/Common/license/: header.license
core/DesktopEditor/AllFontsGen/: CMakeLists.txt  main.cpp
core/DesktopEditor/allthemesgen/: CMakeLists.txt  allthemesgen.pro  main.cpp
core/DesktopEditor/doctrenderer/: CMakeLists.txt  common.h  common_deploy.h  config.h  docbuilder.cpp  docbuilder.h  docbuilder_p.cpp  docbuilder_p.h  doctrenderer.cpp  doctrenderer.h  doctrenderer.pri  drawingfile.h  editors.cpp  editors.h  graphics.cpp  graphics.h  hash.cpp  hash.h  nativecontrol.cpp  nativecontrol.h  server.h
core/DesktopEditor/pluginsmanager/: CMakeLists.txt  help.h  main.cpp  pluginsmanager.pro
core/DocxRenderer/: CMakeLists.txt  DocxRenderer.cpp  DocxRenderer.h  DocxRenderer.pro  convert_params.h  readme.md
core/DocxRenderer/test/: main.cpp  test.pro
core/EpubFile/: CEpubFile.h  CEpubFile.pro  CMakeLists.txt
core/EpubFile/cmake/: CMakeLists.txt
core/EpubFile/src/: CBookContentItem.cpp  CBookContentItem.h  CBookInfo.cpp  CBookInfo.h  CBookItem.cpp  CBookItem.h  CBookToc.cpp  CBookToc.h  CEpubFile.cpp  EpubFile_global.h
core/EpubFile/test/: main.cpp  test.pro
core/Fb2File/: CMakeLists.txt  Fb2File.cpp  Fb2File.h  Fb2File.pro
core/Fb2File/examples/: 1-posledneye-zhelaniye.fb2  2-mech-prednaznacheniya.fb2  3-krov-elfov.fb2  4-chas-prezreniya.fb2  5-kreshcheniye-ognem.fb2  6-bashnya-lastochki.fb2  7-vladychitsa-ozera.fb2  8-sezon-groz.fb2  test2.fb2
core/Fb2File/template/: make.py  template.h
core/Fb2File/test/: main.cpp  test.pro
core/HtmlFile2/: CMakeLists.txt  Common.h  HTMLParameters.h  HTMLReader.cpp  HTMLReader.h  HtmlFile2.pro  MarkdownParameters.h  Table.cpp  Table.h  htmlfile2.cpp  htmlfile2.h
core/HtmlFile2/Tags/: HTMLTags.h  MDTags.cpp  MDTags.h  OOXMLTags.cpp  OOXMLTags.h
core/HtmlFile2/Writers/: IWriter.h  MDWriter.cpp  MDWriter.h  OOXMLWriter.cpp  OOXMLWriter.h
core/HtmlFile2/examples/: test.html  test.mht  test2.xhtml  test3.xhtml  test4.xhtml
core/HtmlFile2/src/: Languages.h  StringFinder.h
core/HtmlFile2/test/: main.cpp  test.pro
core/HwpFile/: CMakeLists.txt  HWPFile.cpp  HWPFile.h  HWPFile.pro
core/HwpFile/HwpDoc/: Errors.h  HWPDocInfo.cpp  HWPDocInfo.h  HWPFile.cpp  HWPFile.h  HWPMLFile.cpp  HWPMLFile.h  HWPSection.cpp  HWPSection.h  HWPStream.cpp  HWPStream.h  HWPXFile.cpp  HWPXFile.h  HanType.h  HwpFileHeader.cpp  HwpFileHeader.h
core/HwpFile/test/: main.cpp  test.pro
core/OFDFile/: CMakeLists.txt  OFDFile.cpp  OFDFile.h  OFDFile.pro
core/OFDFile/src/: Annotation.cpp  Annotation.h  Base.cpp  Base.h  Document.cpp  Document.h  IOFDElement.h  OFDFile_Private.cpp  OFDFile_Private.h  Page.cpp  Page.h  Res.cpp  Res.h
core/OFDFile/test/: main.cpp  test.pro
core/OfficeUtils/: CMakeLists.txt  OfficeUtils.pri  OfficeUtils.pro
core/OfficeUtils/OfficeUtils.xcodeproj/: project.pbxproj
core/OfficeUtils/js/: .gitignore  CMakeLists.txt  zlib.json  zlib_image.json  zlib_image_all.json
core/OfficeUtils/src/: OfficeUtils.cpp  OfficeUtils.h  OfficeUtilsCommon.h  ZipBuffer.cpp  ZipBuffer.h  ZipFolder.h  ZipUtilsCP.cpp  ZipUtilsCP.h  zlib_addon.c  zlib_addon.h
core/OfficeUtils/tests/: .gitignore  main.cpp  tests.pro
core/OfficeUtils/win32/: OfficeUtilsLib.vcproj
core/PdfFile/: CMakeLists.txt  OnlineOfficeBinToPdf.cpp  OnlineOfficeBinToPdf.h  PdfEditor.cpp  PdfEditor.h  PdfFile.cpp  PdfFile.h  PdfFile.pro  PdfReader.cpp  PdfReader.h  PdfWriter.cpp  PdfWriter.h
core/PdfFile/Resources/: BaseFonts.cpp  BaseFonts.h  Fontd050000l.h  Fontn019003l.h  Fontn019004l.h  Fontn019023l.h  Fontn019024l.h  Fontn021003l.h  Fontn021004l.h  Fontn021023l.h  Fontn021024l.h  Fontn022003l.h  Fontn022004l.h  Fontn022023l.h  Fontn022024l.h  Fonts050000l.h
core/PdfFile/SrcReader/: Adaptors.cpp  Adaptors.h  FontsWasm.h  GfxClip.cpp  GfxClip.h  JPXStream2.cpp  JPXStream2.h  MemoryUtils.h  PdfAnnot.cpp  PdfAnnot.h  PdfFont.cpp  PdfFont.h  RendererOutputDev.cpp  RendererOutputDev.h  XmlUtils.h
core/PdfFile/SrcWriter/: AcroForm.cpp  AcroForm.h  Annotation.cpp  Annotation.h  Catalog.cpp  Catalog.h  Consts.h  Destination.cpp  Destination.h  Document.cpp  Document.h  Encodings.h  Encrypt.cpp  Encrypt.h  EncryptDictionary.cpp  EncryptDictionary.h  Field.cpp  Field.h  Font.cpp  Font.h  Font14.cpp  Font14.h  FontCidTT.cpp  FontCidTT.h  FontOTWriter.cpp  FontTT.cpp  FontTT.h  FontTTWriter.cpp  FontTTWriter.h  GState.cpp  GState.h  ICCProfile.h  Image.cpp  Image.h  Info.cpp  Info.h  Metadata.cpp  Metadata.h  (+21 more)
core/UnicodeConverter/: CMakeLists.txt  UnicodeConverter.cpp  UnicodeConverter.h  UnicodeConverter_Encodings.h  UnicodeConverter_internal_empty.cpp  UnicodeConverter_internal_ios.mm
core/XpsFile/: CMakeLists.txt  XpsFile.cpp  XpsFile.h
(+21156 files in other folders)
